Fix form spacing

--- a/css/grid.css
+++ b/css/grid.css
@@ -6,7 +6,7 @@ Expects box-sizing: border-box;
 .grid,
 .row {
 	display: block;
-	overflow: auto;
+	clear: both;
 }
 .row {
 	clear: both;
@@ -17,6 +17,14 @@ Expects box-sizing: border-box;
 	display: block;
 	float: left;
 	min-height: 1px;
+	clear: none;
+}
+
+.grid:after,
+.row:after {
+	content: " ";
+	display: block;
+	clear: both;
 }
 
 .col,
